# EDC-Processor

./: .gitignore  Makefile  README.md  TESTING.md  env.template  firebase_analysis.py  firebase_test.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_metrics.csv
.github/workflows/: ci.yml
01_geocode/: 02_geocode_process.py  requirements.txt
01_geocode/01_geocode/: locations_need_county.csv
01_location/: 01_location_address_generation.py  test_location_generation.py  test_sample.csv
02_esri/: README.md  fetch.py  unified_processor.py
02_geocode/: 01_geocode_analysis.py  README.md
03_esri/: 01_esri_analysis.py  02_esri_processing.py  README.md  cli.py  explore_mapping_table.py  explore_temp_tables.py
03_nearby_schools/: __init__.py  processor.py
04_nearby_schools/: 01_nearby_schools_analysis.py  02_nearby_schools_processing.py  README.md  cli.py  diagnose_edc_matching.py  fetch.py  test_drive_times.py
04_projections/: generate_projections_csv.py  test_edge_cases.py
05_projections/: 01_projections_analysis.py  README.md  test_projections_comparison.py  test_standalone_projections.py
06_metrics/: calculator.py  test_unified_metrics.py
08_processing_status/: 01_processing_status_analysis.py  02_processing_status_update.py
edc_schools/: README.md  firebase_schools_06152025.csv
edc_schools/new_schools/: remaining_CSGF.csv
edc_schools/reports/: firebase_schools_enriched.csv
edc_schools/scripts/: README.md  firebase_schools_enrichment.py
enrollment_projections/: __init__.py  data_fetcher.py  data_structures.py  main.py  projections.py  survival_rates.py  user_data_processor.py  utils.py
entity_processing/: README.md  __init__.py  processor.py  task_manager.py  utils.py
entity_processing/routes/: __init__.py  processing.py  status.py  tasks.py  validation.py
entity_processing/task_handlers/: __init__.py  demographics.py  enrollment.py  location.py  metrics.py  projections.py  team.py
esri/: example_usage.py  process.py
metrics/: UNIFIED_METRICS_SUMMARY.md  unified_calculator.py  utils.py
models/: __init__.py  characteristics.py  configuration.py  core.py  demographics.py  directory.py  enrollment.py  enums.py  history.py  location.py  names.py  processing.py  projections.py  relationships.py  sources.py
output/: school_projections_20250613_164537.csv
scripts/: database_test.py
tests/: __init__.py  conftest.py
tests/integration/: test_database_integration.py  test_firebase_integration.py
tests/unit/: test_processing_pipeline.py  test_task_manager.py  test_utils.py
unified_processing/: __init__.py  processor.py  task_manager.py  utils.py
unified_processing/routes/: processing.py  status.py  tasks.py  validation.py
unified_processing/task_handlers/: __init__.py  esri.py  (+5 more)
